--- a/MoppApp/MoppApp/Container.storyboard
+++ b/MoppApp/MoppApp/Container.storyboard
@@ -358,7 +358,7 @@
                                             <rect key="frame" x="0.0" y="0.0" width="667" height="60"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Missing signatures" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KQF-XJ-qkZ" customClass="ScaledLabel" customModule="MoppApp" customModuleProvider="target">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Missing signatures" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KQF-XJ-qkZ" customClass="ScaledLabel" customModule="MoppApp" customModuleProvider="target">
                                                     <rect key="frame" x="40" y="20" width="587" height="20"/>
                                                     <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="17"/>
                                                     <nil key="textColor"/>
@@ -383,11 +383,11 @@
                                             <rect key="frame" x="0.0" y="0.0" width="667" height="96"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9nm-lT-W8h" customClass="ScaledButton" customModule="MoppApp" customModuleProvider="target">
-                                                    <rect key="frame" x="32" y="25" width="603" height="46"/>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9nm-lT-W8h" customClass="ScaledButton" customModule="MoppApp" customModuleProvider="target">
+                                                    <rect key="frame" x="16" y="21" width="635" height="54"/>
                                                     <color key="backgroundColor" red="0.0" green="0.43137254899999999" blue="0.70980392160000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="height" constant="52" id="Nlm-EK-LPN"/>
+                                                        <constraint firstAttribute="height" constant="48" id="Tzp-Si-611"/>
                                                     </constraints>
                                                     <fontDescription key="fontDescription" name="RobotoCondensed-Regular" family="Roboto Condensed" pointSize="16"/>
                                                     <state key="normal" title="CHOOSE FILE">
@@ -404,11 +404,10 @@
                                                 </button>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstAttribute="bottomMargin" secondItem="9nm-lT-W8h" secondAttribute="bottom" constant="14" id="CYb-jz-GRl"/>
-                                                <constraint firstItem="9nm-lT-W8h" firstAttribute="trailing" secondItem="gdd-9U-o25" secondAttribute="trailingMargin" constant="-16" id="FaN-PF-ncV"/>
-                                                <constraint firstItem="9nm-lT-W8h" firstAttribute="top" secondItem="gdd-9U-o25" secondAttribute="topMargin" constant="14" id="Hs0-CI-LFB"/>
-                                                <constraint firstItem="9nm-lT-W8h" firstAttribute="leading" secondItem="gdd-9U-o25" secondAttribute="leadingMargin" constant="16" id="d7C-p8-c7l"/>
-                                                <constraint firstItem="9nm-lT-W8h" firstAttribute="centerY" secondItem="gdd-9U-o25" secondAttribute="centerY" id="lri-lU-RvN"/>
+                                                <constraint firstItem="9nm-lT-W8h" firstAttribute="leading" secondItem="gdd-9U-o25" secondAttribute="leadingMargin" id="7vh-5q-0O0"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="9nm-lT-W8h" secondAttribute="trailing" id="Jx3-14-Dw5"/>
+                                                <constraint firstItem="9nm-lT-W8h" firstAttribute="top" secondItem="gdd-9U-o25" secondAttribute="topMargin" constant="10" id="bDl-Ak-sCc"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="9nm-lT-W8h" secondAttribute="bottom" constant="10" id="oqA-hV-Ujx"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
@@ -905,7 +904,7 @@
                                                     <rect key="frame" x="16" y="19" width="635" height="58"/>
                                                     <color key="backgroundColor" red="0.0" green="0.43137254899999999" blue="0.70980392160000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="height" constant="58" id="DpJ-0b-1ve"/>
+                                                        <constraint firstAttribute="height" constant="48" id="DpJ-0b-1ve"/>
                                                     </constraints>
                                                     <fontDescription key="fontDescription" name="RobotoCondensed-Regular" family="Roboto Condensed" pointSize="16"/>
                                                     <state key="normal" title="CHOOSE FILE">
@@ -940,7 +939,7 @@
                                             <rect key="frame" x="0.0" y="0.0" width="667" height="66"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Addressees are missing" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="3" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="sh3-u9-HaY" customClass="ScaledLabel" customModule="MoppApp" customModuleProvider="target">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Addressees are missing" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="3" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="sh3-u9-HaY" customClass="ScaledLabel" customModule="MoppApp" customModuleProvider="target">
                                                     <rect key="frame" x="48" y="23" width="571" height="20"/>
                                                     <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="17"/>
                                                     <nil key="textColor"/>
@@ -972,16 +971,16 @@
                                                         <constraint firstAttribute="width" constant="22" id="qJz-9X-aiz"/>
                                                     </constraints>
                                                 </imageView>
-                                                <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" axis="vertical" alignment="top" spacing="1" translatesAutoresizingMaskIntoConstraints="NO" id="bDQ-JZ-Jyl">
+                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="1" translatesAutoresizingMaskIntoConstraints="NO" id="bDQ-JZ-Jyl">
                                                     <rect key="frame" x="62" y="8" width="548" height="44"/>
                                                     <subviews>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="252" horizontalCompressionResistancePriority="749" verticalCompressionResistancePriority="751" ambiguous="YES" text="MARI MAASIKAS,9800984323" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="10" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="jap-nW-m3U" customClass="ScaledLabel" customModule="MoppApp" customModuleProvider="target">
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="252" horizontalCompressionResistancePriority="749" verticalCompressionResistancePriority="751" text="MARI MAASIKAS,9800984323" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="10" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="jap-nW-m3U" customClass="ScaledLabel" customModule="MoppApp" customModuleProvider="target">
                                                             <rect key="frame" x="0.0" y="0.0" width="231.5" height="20"/>
                                                             <fontDescription key="fontDescription" name="RobotoCondensed-Bold" family="Roboto Condensed" pointSize="17"/>
                                                             <color key="textColor" red="0.35686274509999999" green="0.35686274509999999" blue="0.35686274509999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Signed 12.08.2017, 13:22" lineBreakMode="wordWrap" numberOfLines="10" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="e2G-rm-jEh" customClass="ScaledLabel" customModule="MoppApp" customModuleProvider="target">
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Signed 12.08.2017, 13:22" lineBreakMode="wordWrap" numberOfLines="10" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="e2G-rm-jEh" customClass="ScaledLabel" customModule="MoppApp" customModuleProvider="target">
                                                             <rect key="frame" x="0.0" y="21" width="184" height="23"/>
                                                             <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="16"/>
                                                             <color key="textColor" red="0.45882352941176469" green="0.45882352941176469" blue="0.45882352941176469" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -989,14 +988,14 @@
                                                         </label>
                                                     </subviews>
                                                 </stackView>
-                                                <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="L7d-1E-zfP">
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="L7d-1E-zfP">
                                                     <rect key="frame" x="16" y="60" width="635" height="1"/>
                                                     <color key="backgroundColor" red="0.35686274509999999" green="0.35686274509999999" blue="0.35686274509999999" alpha="0.20732555650000001" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="1" id="bzb-5B-pqM"/>
                                                     </constraints>
                                                 </view>
-                                                <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="F8O-EX-0Mm">
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="F8O-EX-0Mm">
                                                     <rect key="frame" x="626" y="8" width="25" height="44"/>
                                                     <state key="normal" image="icon_remove-1"/>
                                                     <connections>
@@ -1036,10 +1035,10 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="myZ-5t-UM6" customClass="ScaledButton" customModule="MoppApp" customModuleProvider="target">
-                                                    <rect key="frame" x="24" y="22" width="619" height="52"/>
+                                                    <rect key="frame" x="16" y="21" width="635" height="54"/>
                                                     <color key="backgroundColor" red="0.0" green="0.43137254899999999" blue="0.70980392160000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="height" constant="58" id="LZu-pD-Hks"/>
+                                                        <constraint firstAttribute="height" constant="48" id="yin-kz-cY4"/>
                                                     </constraints>
                                                     <fontDescription key="fontDescription" name="RobotoCondensed-Regular" family="Roboto Condensed" pointSize="16"/>
                                                     <state key="normal" title="CHOOSE FILE">
@@ -1056,11 +1055,10 @@
                                                 </button>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="myZ-5t-UM6" firstAttribute="trailing" secondItem="mNB-gx-Ius" secondAttribute="trailingMargin" constant="-8" id="8mt-vs-xzE"/>
-                                                <constraint firstAttribute="bottomMargin" secondItem="myZ-5t-UM6" secondAttribute="bottom" constant="11" id="AMG-TR-6YX"/>
-                                                <constraint firstItem="myZ-5t-UM6" firstAttribute="leading" secondItem="mNB-gx-Ius" secondAttribute="leadingMargin" constant="8" id="JgG-qJ-aAc"/>
-                                                <constraint firstItem="myZ-5t-UM6" firstAttribute="centerY" secondItem="mNB-gx-Ius" secondAttribute="centerY" id="Kwg-Eh-dQu"/>
-                                                <constraint firstItem="myZ-5t-UM6" firstAttribute="top" secondItem="mNB-gx-Ius" secondAttribute="topMargin" constant="11" id="wgs-xF-ohF"/>
+                                                <constraint firstItem="myZ-5t-UM6" firstAttribute="top" secondItem="mNB-gx-Ius" secondAttribute="topMargin" constant="10" id="0qz-Ht-Xd9"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="myZ-5t-UM6" secondAttribute="bottom" constant="10" id="CxU-m6-mre"/>
+                                                <constraint firstItem="myZ-5t-UM6" firstAttribute="trailing" secondItem="mNB-gx-Ius" secondAttribute="trailingMargin" id="NCm-TN-gaY"/>
+                                                <constraint firstItem="myZ-5t-UM6" firstAttribute="leading" secondItem="mNB-gx-Ius" secondAttribute="leadingMargin" id="h6i-gk-uV5"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
